# bitsocial-github-alerts

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build-run-test.yml  docker-publish.yml  rust-clippy.yml
deploy/: docker-compose.yml
src/: config.rs  http_server.rs  lib.rs  main.rs  models.rs  schema.rs
src/bots/: bot_service.rs  mod.rs
src/observability/: metrics.rs  startup.rs
src/webhooks/: common.rs
src/webhooks/github/: http_server.rs
src/webhooks/github/webhook_handlers/: mod.rs  push.rs  release.rs  utils.rs
