[package]
name = "bitsocial-github-alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
dotenv = "0.15.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "serde_json", "chrono"] }
glob = "0.3.1"
rand = "0.8.5"
diesel_migrations = "2.1.0"
html-escape = "0.2.13"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
lazy_static = "1.4"
